<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, This is quickpark!</string>
    <string name="app_name">quickpark</string>
    <string name="activity_findparking">Find Parking</string>
    <string name="activity_locatemycar">Locate My Car</string>
    <string name="activity_paymenthistory">Payment History</string>
    <string name="activity_parkandremind">Park and Remind</string>
    <string name="activity_towingcontact">Towing Contacts</string>
    <string name="activity_parkingrules">Parking Rules</string>
    
    <!--  Park and Payment options --> 
    <string name="spot_details">Parking Spot Details</string>
    <string name="min15">15 min</string>
    <string name="min30">30 min</string>
    <string name="min45">45 min</string>
    <string name="hr1">1 hr</string>
    <string name="hr1min15">1 hr 15 min</string>
    <string name="hr1min30">1 hr 30 min</string>
    <string name="hr1min45">1 hr 45 min</string>
    <string name="hr2">2 hr</string>
    
    <!--  AOSP -->
    <string name="welcome">Welcome to the Sample store!</string>
    <string name="billing_not_supported_title">Can\'t make purchases</string>
    <string name="billing_not_supported_message">The Market billing service is not available at this time.  You can continue to use this app but you won\'t be able to make purchases.</string>
    <string name="cannot_connect_title">Can\'t connect to Market</string>
    <string name="cannot_connect_message">This app cannot connect to Market.
     Your version of Market may be out of date.
     You can continue to use this app but you won\'t be able to make purchases.</string>
    <string name="restoring_transactions">Restoring transactions</string>
    <string name="learn_more">Learn more</string>
    <string name="help_url" formatted="false">http://market.android.com/support/bin/answer.py?answer=1050566&amp;hl=%lang%&amp;dl=%region%</string>
    <string name="pay_now">Pay Now</string>
    <string name="select_spot">Select Spot</string>
    <string name="driving_directions">Get Directions</string>
    <string name="setToRemind">Remind</string>
    <string name="setToPay">Pay and Remind</string>
    <string name="select_item">Select an item</string>
    <string name="edit_payload">Edit Payload</string>
    <string name="edit_payload_title">Edit the developer payload associated with this purchase</string>
    <string name="edit_payload_accept">Set</string>
    <string name="edit_payload_clear">No Payload</string>
    <string name="payment_history">Payment History</string>
    <string name="recent_transactions">Recent activity</string>
    <string name="select_license_plate_prompt">Select License Plate</string>

    <string name="two_handed_sword">Two-handed sword</string>
    <string name="potions">Potions</string>

    <!-- The following are reserved skus defined by Market for testing. -->
    <string name="android_test_canceled">android.test.canceled</string>
    <string name="android_test_purchased">android.test.purchased</string>
    <string name="android_test_item_unavailable">android.test.item unavailable</string>
    <string name="android_test_refunded">android.test.refunded</string>
    
    <string name="locations_prompt">Please select a location</string>
    <string-array name="locations_array">
      <item>Available Locations</item>
      <item>Current Location</item>
		<item>Downtown, 225 BROADWAY, SUITE 1100</item>
		<item>Mid-City, 3727 EL CAJON BLVD</item>   
		<item>Uptown, 3108 FIFTH AVE., SUITE B</item>
		<item>Old Town, 2383 San Diego Ave.</item>  
		<item>Pacific Beach, 1503 Garnet Ave</item>   
		<item>La Jolla, 1150 Silverado St. Ste 221</item>
    </string-array>
    <string name="availableLocations">Choose San Diego Downtown or Current Location. Datasets for other districts coming soon</string>
    
</resources>